--- a/config-server/src/main/resources/bootstrap.yml
+++ b/config-server/src/main/resources/bootstrap.yml
@@ -4,11 +4,12 @@ spring:
   cloud:
     config:
       server:
-         git:
-          uri: https://github.com/vikassivaravindran/spring-cloud-config-repo.git
-          clone-on-start: true
+        encrypt:
+          enabled: false
+        git:
+           uri: https://github.com/vikassivaravindran/spring-cloud-config-repo.git
+           clone-on-start: true
 encrypt:
-  enabled: false
   key: password 
   key-store:
     location: classpath:/server.jks
